# rust-nrf52-starter

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs  radio.rs
