[package]
authors = ["kdewald <5274600+kdewald@users.noreply.github.com>"]
edition = "2018"
name = "nrf52-starter"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
nrf52840-hal = { version = "0.15.0", features = ["rt"] }

# this lets you use `cargo fix`!
[[bin]]
name = "nrf52-starter"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
